fixed z-index issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -443,7 +443,7 @@ h1 {
 	text-align: center;
 	text-shadow: black 1px 1px 2px;
 	font-size: 36pt;
-	z-index: 9999;
+	z-index: 1;
 	position: relative;
 	padding-bottom: 1em;
 }
